--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-VITE_GITHUB_URL="http://api.github.COM"
+VITE_GITHUB_URL="https://api.github.com" 
 VITE_GITHUB_TOKEN="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"
 
-# ccreate-react-app ma REACT_APP... vite mate VITE_barobar
